# keep-awake

./: Cargo.toml  README.md
.github/: pull_request_template.md  release.yml
.github/workflows/: build-release.yml  ci-cargo-audit.yml  ci-pr.yml  ci-tags.yml  clippy.yml  create-release.yml  main-and-pr.yml  tags.yml  trigger-workflow-in-other-repo.yml  unit-tests.yml
src/: cli.rs  keyboard.rs  main.rs  mouse.rs  programname.rs  settings.rs
