[package]
name = "ka"
version = "0.7.0"
edition = "2021"
authors = ["mdpadberg <mdpadberg@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
mouse-rs = "0.4"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.79"
enigo = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0.12"