[package]
name = "ka"
version = "1.0.0"
edition = "2021"
authors = ["mdpadberg <mdpadberg@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
enigo = "0.2.1"
chrono = "0.4.38"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.14"