[package]
name = "ka"
version = "1.0.0"
edition = "2021"
authors = ["mdpadberg <mdpadberg@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
chrono = "0.4.38"
rand = "0.8.5"
enigo = "0.3.0"

[target.x86_64-unknown-linux-gnu.dependencies]
enigo = { version = "0.3.0", features = ["x11rb"] }

[dev-dependencies]
assert_cmd = "2.0.14"